<resources>
    <string name="app_name">Mul2Launcher</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nav_mainapp">我的应用</string>
    <string name="nav_appstore">应用商城</string>
    <string name="nav_settings">系统设置</string>
    <string name="mainapp_add_app">添加应用</string>
    <string name="mainapp_uninstalling">正在卸载...</string>
    <string name="mainapp_menudialog_move">移动</string>
    <string name="mainapp_menudialog_top">置顶</string>
    <string name="mainapp_menudialog_bottom">置底</string>
    <string name="mainapp_menudialog_uninstall">卸载</string>
    <string name="mainapp_promptdialog_sure">确定</string>
    <string name="mainapp_promptdialog_cancel">取消</string>
    <string name="mainapp_promptdialog_message">确定要卸载“%1$s”吗？</string>
    <string name="authfail">您的机顶盒使用受限，如有疑问请联系你的销售商</string>
    <string name="settings_menu_network_title">网络</string>
    <string name="settings_menu_lang_title">语言</string>
    <string name="settings_menu_zoom_title">缩放</string>
    <string name="settings_menu_upgrade_title">升级</string>
    <string name="settings_menu_upgrade_online">在线升级</string>
    <string name="settings_menu_about_title">关于</string>
    <string name="settings_menu_timezone_title">时区</string>
    <string name="settings_menu_network_title_info">未设置</string>
    <string name="settings_menu_lang_title_info">中文简体</string>
   	<string name="settings_menu_timezone_title_info">UTC+8:00</string>
    <string name="settings_menu_network_title_info_false">未连接</string>
    <string name="settings_menu_network_title_info_true">有线</string>
    <string name="settings_menu_lang_title_info_zh_cn">简体中文</string>
    <string name="settings_menu_lang_title_info_zh_tw">繁体中文</string>
    <string name="settings_menu_lang_title_info_en">English</string>
    <string name="settings_menu_zoom_title_info">100</string>
    <string name="settings_menu_upgrade_title_info">1.0</string>
    <string name="settings_menu_about_title_info">VBOX</string>
    <string name="settings_menu_mac">MAC:</string>
    <string name="settings_network_wired">有线</string>
    <string name="settings_network_wifi">Wi-Fi</string>
    <string name="settings_network_detection">网络检测</string>
    <string name="settings_network_signal">wifi信号</string>
    <string name="settings_network_auto">自动获取</string>
    <string name="settings_network_manual">手动配置</string>
    <string name="settings_network_fetch">立即获取</string>
    <string name="settings_network_wifi_connct_wifi">连接Wi-Fi</string>
    <string name="settings_network_detetion">立即检测</string>
    <string name="settings_network_re_detetion">重新检测</string>
    <string name="settings_network_ipaddress">IP地址:</string>
    <string name="settings_network_subnet_mask">子网掩码:</string>
    <string name="settings_network_default_gateway">默认网关:</string>
    <string name="settings_network_gateway">家庭网关:</string>
    <string name="settings_network_dnsaddr">DNS地址:</string>
    <string name="settings_network_server">服务器</string>
    <string name="settings_network_detection_warn">检测当前的网络状态，如检测出现异常，请重新设置网络！</string>
    <string name="settings_network_dns">DNS:</string>
    <string name="settings_network_manual_ok">确定</string>
    <string name="settings_network_normal">正常</string>
    <string name="settings_network_abnormal">异常</string>
    <string name="settings_network_errorcode">异常 错误码:</string>
    <string name="settings_network_selete">选取网络...</string>
    <string name="settings_network_wifi_on">ON</string>
    <string name="settings_network_wifi_off">OFF</string>
    <string name="settings_network_wifi_password">密码:</string>
    <string name="settings_network_wifi_showpassword">显示密码</string>
    <string name="settings_network_wifi_showoption">显示高级选项</string>
    <string name="settings_network_wifi_connect">连接</string>
    <string name="settings_network_wifi_cancel">取消</string>
    <string name="settings_network_wifi_ipsetting">IP设置</string>
    <string name="settings_network_wifi_ipaddress">IP地址</string>
    <string name="settings_network_wifi_subnet_mask">子网掩码</string>
    <string name="settings_network_wifi_default_gateway">默认网关</string>
    <string name="settings_network_wifi_gateway">网关</string>
    <string name="settings_network_wifi_dns">DNS</string>
    <string name="settings_network_wifi_network_fix">网络前缀长度</string>
    <string name="settings_network_point">.</string>
    <string name="settings_network_192">192</string>
    <string name="settings_network_19">19</string>
    <string name="settings_network_100">100</string>
    <string name="settings_network_168">168</string>
    <string name="settings_network_0">0</string>
    <string name="settings_network_fetch_success">获取成功</string>
    <string name="settings_network_input_password">请输入密码！</string>
    <string name="settings_network_fetch_fail">获取失败</string>
    <string name="settings_network_manual_success">手动配置成功</string>
    <string name="settings_network_manual_fail">手动配置失败</string>
    <string name="settings_network_wifi_connect_fail">连接失败</string>
    <string name="settings_network_reticle_not_exist">请插入网线</string>
    <string name="settings_network_waitting">加载中，请稍等...</string>
    <string name="settings_network_fetching">获取中，请稍等...</string>
    <string name="settings_network_refresh">刷新</string>
    <string name="settings_network_ok_refresh">按OK键，刷新WI-FI</string>
    <string name="settings_network_ethernet_connect">已连接有线网络，有线与Wi-Fi不可同时使用</string>
    <string name="settings_network_no_signal">无WI-FI信号</string>
    <string name="settings_network_strong">强</string>
    <string name="settings_network_strong_less">较强</string>
    <string name="settings_network_ordinary">一般</string>
    <string name="settings_network_weak">弱</string>
    <string name="settings_network_none">NONE</string>
    <string name="settings_network_psk">WPA/WPA2 PSK</string>
    <string name="settings_network_wep">WEP</string>
    <string name="settings_network_connect_wired">您已连接有线网络</string>
    <string name="settings_network_detection_finish">检测完成</string>
    <string name="settings_network_detection_normal">网络正常</string>
    <string name="settings_network_detection_abnormal">网络异常，请您重新设置网络</string>
    <string name="settings_network_detection_not_newtork">无网络连接</string>
    <string name="settings_network_wired_not_connect">未连接有线</string>
    <string name="settings_network_wifi_dhcp">DHCP</string>
    <string name="settings_network_wifi_static">静态</string>
    <string name="settings_network_wifi_signal">信号强度:</string>
    <string name="settings_network_wifi_security">安  全  性:</string>
    <string name="settings_network_wifi_macaddr">MAC地址:</string>
    <string name="settings_network_wifi_forget">忘记</string>
    <string name="settings_network_wifi_donot_save">不保存</string>
    <string name="setting_network_ip_dialog_back">返回</string>
    <string name="settings_zoom_value">100%</string>
    <string name="settings_zoom_warming_info">按遥控器左右方向键，调节显示比例</string>
    <string name="settings_zoom_limit_info">不可再缩小比例</string>
    <string name="settings_prompt_dialog_loading_info">设置中，请稍候&#8230;</string>
    <string name="settings_upgrade_version">当前版本：</string>
    <string name="settings_upgrade_info">为向您提供更好的服务，我们将不定期更新系统版本。</string>
    <string name="settings_upgrade_warning_msg">升级过程中请不要关闭电源!</string>
    <string name="settings_upgrade_button">检测更新</string>
    <string name="settings_upgrade_check_version">检测中，请稍候&#8230;</string>
    <string name="settings_upgrade_ime_version">检测到新版本：</string>
    <string name="settings_upgrade_ime_msg_0"></string>
    <string name="settings_upgrade_ime_msg_1"></string>
    <string name="settings_upgrade_ime_msg_2"></string>
    <string name="settings_upgrade_ime_msg_3"></string>
    <string name="settings_upgrade_ime_msg_4"></string>
    <string name="settings_upgrade_ime_button">立即升级</string>
    <string name="settings_upgrading_info">正在升级到最新版本&#8230;</string>
    <string name="settings_upgrading_progress_num">0%</string>
    <string name="settings_upgrading_button">重新升级</string>
    <string name="settings_upgrade_low_on_space">SD卡或U盘空间不足</string>
    <string name="settings_upgrade_cache_low_on_space">空间不足</string>
    <string name="settings_upgrade_low_on_space_8935">SD卡空间不足</string>
    <string name="settings_upgrade_insert_card">请插入SD卡或U盘，进行升级</string>
    <string name="settings_upgrade_insert_card_8935">请插入SD卡，进行升级</string>
    <string name="settings_upgrade_no_upgrade_info">当前版本为最新版本</string>
    <string name="settings_upgrade_check_net_error">网络异常</string>
    <string name="settings_upgrade_check_bind_error">绑定服务失败</string>
    <string name="settings_upgrade_again_upgrade">升级失败，请重新升级</string>
    <string name="settings_upgrade_reboot">重启中，请稍候&#8230;</string>
    <string name="settings_upgrade_check">升级文件检测中，请稍候&#8230;</string>
    <string name="settings_upgrade_env_check">升级环境检测中&#8230;</string>
    <string name="settings_lang_ch">简体中文</string>
    <string name="settings_lang_tw">繁體中文</string>
    <string name="settings_lang_eng">English</string>
    <string name="settings_lang_jp">日本語</string>
    <string name="settings_lang_kr">한국어</string>
    <string name="settings_lang_th">ภาษาไทย</string>
    <string name="settings_lang_vi_VN">Tiếng Việt</string>
    <string name="settings_lang_ms_MY">Bahasa Melayu</string>
    <string name="settings_lang_tl_PH">Filipino</string>
    <string name="settings_lang_hi_IN">हिनदी</string>
    <string name="settings_lang_es_ES">español</string>
    <string name="settings_lang_pt_PT">Portugues</string>
    <string name="settings_lang_fr_FR">Français</string>
    <string name="settings_lang_de_DE">Deutsch</string>
    <string name="settings_lang_ru_RU">русский язык</string>
    <string name="settings_lang_info">按OK键，设置语言。</string>
    <string name="settings_about_sysinfo">系统信息</string>
    <string name="settings_about_legal">法律声明</string>
    <string name="settings_about_reset">恢复出厂</string>
    <string name="settings_about_warranty">保修期</string>
    <string name="settings_about_device">设备名称 : </string>
    <string name="settings_about_andver">Android版本 : </string>
    <string name="settings_about_softver">系统版本  : </string>
    <string name="settings_about_hdver">硬件型号 : </string>
    <string name="settings_about_mac">ＭＡＣ码 ： </string>
    <string name="settings_about_reset_info">恢复至出厂时的状态，该操作将清除您内部存储设备上的所有数据，包括下载安装的应用，系统设置以及其他用户数据。</string>
    <string name="settings_about_reset_button">立即恢复</string>
    <string name="settings_about_restoredlg_info">确定恢复出厂设置?</string>
    <string name="settings_about_restoredlg_ok">确定</string>
    <string name="settings_about_restoredlg_cancel">取消</string>
    <string name="settings_about_notices_page">%1$d/%2$d页</string>
    <string name="settings_about_warranty_info_1_active">已激活，保修期至:</string>
    <string name="settings_about_warranty_info_1_inactive">未激活</string>
    <string name="settings_timezone_info">UTC+08:00（北京、重庆、香港特别行政区、乌鲁木齐、吉隆坡、新加坡、台北）</string>
   	<string name="settings_timezone_info_1">中途岛、萨摩亚群岛</string>
   	<string name="settings_timezone_info_2">夏威夷</string>
   	<string name="settings_timezone_info_3">蒂华纳、下加利福尼亚州、太平洋时间（美国和加拿大）</string>
   	<string name="settings_timezone_info_4">奇瓦瓦、拉巴斯、马萨特兰、山地时间（美国和加拿大）、亚利桑那</string>
   	<string name="settings_timezone_info_5">瓜达拉哈拉、墨西哥城、蒙特雷、萨斯喀彻温、中部时间（美国和加拿大）、中美洲</string>
   	<string name="settings_timezone_info_6">波哥大、利马、基多、东部时间（美国和加拿大）、印第安纳州（东部）</string>
   	<string name="settings_timezone_info_7">加拉斯加</string>
   	<string name="settings_timezone_info_8">大西洋时间（加拿大）、玛瑙斯、乔治敦、拉巴斯、圣胡安、圣地亚哥、亚松森</string>
   	<string name="settings_timezone_info_9">巴西利亚、布宜诺斯艾利斯、格陵兰、卡宴、蒙得维的亚</string>
   	<string name="settings_timezone_info_10">中大西洋</string>
   	<string name="settings_timezone_info_11">佛得角群岛、亚速尔群岛</string>
   	<string name="settings_timezone_info_12">都伯林、爱丁堡、里斯本、伦敦、卡萨布兰卡、蒙罗维亚、雷克雅未克、协调世界时</string>
</resources>