<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
  	    android:id="@+id/id_manual_setting_ip_view"
  	    android:layout_width="match_parent"
		android:layout_height="match_parent">     	
  	   	
  	     <TextView
	        android:id="@+id/id_setting_network_manual_ipaddress"
	   		android:layout_marginRight="876dp"
        	android:layout_marginTop="275dp"
  	    	android:layout_width="wrap_content"
  	    	android:layout_height="wrap_content"
  	    	android:layout_alignParentRight="true"
	   		android:textColor="@color/settings_network_iptext"
	   		android:textSize="@dimen/size_28"
	   		android:text="@string/settings_network_ipaddress"/>
  	     
  	     <com.sz.ead.framework.mul2launcher.settings.network.IpAddrManual
	       android:id="@+id/id_ipaddr_manual_ipaddr"
	       android:layout_marginLeft="424dp"
        	android:layout_marginTop="262dp"
  	    	android:layout_width="550dp"
  	    	android:layout_height="72dp">
	   	 </com.sz.ead.framework.mul2launcher.settings.network.IpAddrManual>
  	     
  	     <TextView
	        android:id="@+id/id_setting_network_manual_subnet_mask"
	   		android:layout_marginRight="876dp"
        	android:layout_marginTop="348dp"
  	    	android:layout_width="wrap_content"
  	    	android:layout_height="wrap_content"
	   		android:layout_alignParentRight="true"
	   		android:textColor="@color/settings_network_iptext"
	   		android:textSize="@dimen/size_28"
	   		android:text="@string/settings_network_subnet_mask"/>
	  	  <com.sz.ead.framework.mul2launcher.settings.network.IpAddrManual
		       android:id="@+id/id_ipaddr_manual_mask"
		       android:layout_marginLeft="424dp"
	        	android:layout_marginTop="335dp"
	  	    	android:layout_width="550dp"
	  	    	android:layout_height="72dp">
		   	</com.sz.ead.framework.mul2launcher.settings.network.IpAddrManual>
  	     
  	     <TextView
	        android:id="@+id/id_setting_network_manual_default_gateway"
	   		android:layout_marginRight="876dp"
        	android:layout_marginTop="420dp"
  	    	android:layout_width="wrap_content"
  	    	android:layout_height="wrap_content"
	   		android:layout_alignParentRight="true"
	   		android:textColor="@color/settings_network_iptext"
	   		android:textSize="@dimen/size_28"
	   		android:text="@string/settings_network_gateway"/>
  	   <com.sz.ead.framework.mul2launcher.settings.network.IpAddrManual
	       android:id="@+id/id_ipaddr_manual_gateway"
	       android:layout_marginLeft="424dp"
        	android:layout_marginTop="407dp"
  	    	android:layout_width="550dp"
  	    	android:layout_height="72dp">
	   	</com.sz.ead.framework.mul2launcher.settings.network.IpAddrManual>
  	     
  	     <TextView
	        android:id="@+id/id_setting_network_manual_dns"
	   		android:layout_marginRight="876dp"
        	android:layout_marginTop="493dp"
  	    	android:layout_width="wrap_content"
  	    	android:layout_height="wrap_content"
	   		android:layout_alignParentRight="true"
	   		android:textColor="@color/settings_network_iptext"
	   		android:textSize="@dimen/size_28"
	   		android:text="@string/settings_network_dnsaddr"/>
  	     <com.sz.ead.framework.mul2launcher.settings.network.IpAddrManual
	       android:id="@+id/id_ipaddr_manual_dns"
	       android:layout_marginLeft="424dp"
        	android:layout_marginTop="480dp"
  	    	android:layout_width="550dp"
  	    	android:layout_height="72dp">
	   	</com.sz.ead.framework.mul2launcher.settings.network.IpAddrManual>
	   	
  	     <Button 
	    android:id="@+id/id_setting_network_manual_ok"
	            android:layout_width="312dp"
	            android:layout_height="58dp"
	            android:layout_marginLeft="484dp"
	            android:layout_marginTop="593dp"
	            android:gravity="center"
	            android:textColor="@drawable/settings_network_bt_text"
	            android:textSize="@dimen/size_34"
	            android:background="@drawable/settings_network_bt_bg"
	            android:text="@string/settings_network_manual_ok"/>
  	     
  	 </RelativeLayout>