<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
    
	<RadioGroup
        android:id="@+id/nav_radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">
        
		<RadioButton
            android:id="@+id/nav_mainapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:button="@null"
            android:gravity="center"
        	android:textSize="@dimen/size_32"
        	android:text="@string/nav_mainapp"
        	android:saveEnabled="false"
        	android:focusableInTouchMode="true"
        	android:textColor="@drawable/nav_color_selector"
        	android:background="@drawable/nav_bg_selector" />
		
		<RadioButton
            android:id="@+id/nav_appstore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:button="@null"
            android:gravity="center"
        	android:textSize="@dimen/size_28"
        	android:saveEnabled="false"
        	android:text="@string/nav_appstore"
        	android:textColor="@drawable/nav_color_selector"
        	android:background="@drawable/nav_bg_selector"/>
		
		<RadioButton
            android:id="@+id/nav_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:button="@null"
            android:gravity="center"
            android:saveEnabled="false"
        	android:textSize="@dimen/size_28"
        	android:text="@string/nav_settings"
        	android:textColor="@drawable/nav_color_selector"
        	android:background="@drawable/nav_bg_selector"/>
    </RadioGroup>
    
</RelativeLayout>